--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon -w src --exec \"babel-node src --presets env\"",
-    "build": "rimraf dist && babel src -s -D -d dist --presets env",
-    "start": "node dist"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {    
+  "dependencies": {
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
@@ -21,9 +19,6 @@
     "mongoose": "^5.7.13"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "nodemon": "^2.0.1",
-    "rimraf": "^3.0.0"
+    "nodemon": "^2.0.1"
   }
 }
