--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "graphql-middleware": "^4.0.2",
     "graphql-tools": "^4.0.6",
     "graphql-yoga": "^1.18.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.13"
   },
   "devDependencies": {
