--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
+    "date-fns": "^2.8.1",
     "dotenv": "^8.2.0",
     "graphql-middleware": "^4.0.2",
     "graphql-tools": "^4.0.6",
